--- a/_includes/team.html
+++ b/_includes/team.html
@@ -2,70 +2,70 @@
     <div class="imgteamsection">
         <div class="conteamers">
             <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
             </div>
             <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
             </div>
             <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
             </div>
             <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
-            </div>
-        </div>
-
-        <div class="conteamers">
-            <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
-            </div>
-            <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
             </div>
         </div>
 
         <div class="conteamers">
             <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
             </div>
             <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
             </div>
             <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
             </div>
             <div class="teamers">
-                <img src="../img/team/moe.png">
-                <h2>NOMBRE</h2>
-                <h3>CARGO</h3>
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
+            </div>
+        </div>
+
+        <div class="conteamers">
+            <div class="teamers">
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/Moe.png">
+                <h3>NOMBRE</h3>
+                <h4>CARGO</h4>
             </div>
         </div>
     </div>
