--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -480,7 +480,16 @@ body {
     display: flex;
     flex-direction:column;
     flex:wrap;
-    justify-content: center;
+    justify-content: space-around;
+    width:100%;
+    height: 100%;
+    background:red;
+}
+
+.teamers h3,
+.teamers h4 {
+    padding:0;
+    margin:0;
 }
 
 .conteamers {
