tamaño img teamers

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -492,6 +492,11 @@ body {
     margin:0;
 }
 
+.teamers img {
+    width:80px;
+    height:80px;
+}
+
 .conteamers {
     display: flex;
     flex:wrap;
