--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -475,7 +475,16 @@ body {
     overflow: hidden;
 }
 
-.imgteamsection,
+.imgteamsection {
+    display: flex;
+    flex-direction:column;
+    flex:wrap;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+    height: 100%;
+}
+
 .teamers {
     display: flex;
     flex-direction:column;
@@ -483,8 +492,8 @@ body {
     justify-content: space-around;
     width:100%;
     height: 100%;
-    background:red;
 }
+
 
 .teamers h3,
 .teamers h4 {
@@ -493,8 +502,8 @@ body {
 }
 
 .teamers img {
-    width:80px;
-    height:80px;
+    width:90px;
+    height:90px;
 }
 
 .conteamers {
