--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -479,8 +479,6 @@ body {
     display: flex;
     flex-direction:column;
     flex:wrap;
-    justify-content: center;
-    align-items: center;
     width:100%;
     height: 100%;
 }
@@ -490,6 +488,7 @@ body {
     flex-direction:column;
     flex:wrap;
     justify-content: space-around;
+    align-items: space-around;
     width:100%;
     height: 100%;
 }
