--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -487,8 +487,8 @@ body {
     display: flex;
     flex-direction:column;
     flex:wrap;
-    justify-content: space-around;
-    align-items: space-around;
+    justify-content: space-between;
+    align-items: space-between;
     width:100%;
     height: 100%;
 }
