--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -481,6 +481,8 @@ body {
     flex:wrap;
     width:100%;
     height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .teamers {
@@ -489,8 +491,7 @@ body {
     flex:wrap;
     justify-content: space-between;
     align-items: space-between;
-    width:100%;
-    height: 100%;
+    background:blue;
 }
 
 
