--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -481,8 +481,6 @@ body {
     flex:wrap;
     width:100%;
     height: 100%;
-    justify-content: center;
-    align-items: center;
 }
 
 .teamers {
@@ -491,7 +489,7 @@ body {
     flex:wrap;
     justify-content: space-between;
     align-items: space-between;
-    background:blue;
+    background:green;
     width:100%;
 }
 
