flex end teamers align items

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -488,7 +488,7 @@ body {
     flex-direction:column;
     flex:wrap;
     justify-content: flex-end;
-    align-items: center;
+    align-items: flex-end;
     width:100%;
 }
 
