--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -487,8 +487,8 @@ body {
     display: flex;
     flex-direction:column;
     flex:wrap;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
     width:100%;
 }
 
