teamer img - + padding 5px

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -492,16 +492,15 @@ body {
     width:100%;
 }
 
-
 .teamers h3,
 .teamers h4 {
-    padding:0;
+    padding:5px;
     margin:0;
 }
 
 .teamers img {
-    width:90px;
-    height:90px;
+    width:70px;
+    height:70px;
 }
 
 .conteamers {
