--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -499,6 +499,7 @@ body {
     margin:0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
+    color:white;
 }
 
 .teamers img {
