--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,5 +1,10 @@
 <section id="team">
     <div class="imgteamsection">
+
+        <div>
+            <h3>OUR TEAM</h3>
+        </div>
+
         <div class="conteamers">
             <div class="teamers">
                 <img src="../img/team/Moe.png">
