team section title

--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,7 +1,7 @@
 <section id="team">
     <div class="imgteamsection">
 
-        <div>
+        <div class="teamsectiontitle">
             <h3>OUR TEAM</h3>
         </div>
 
