--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -483,7 +483,7 @@ body {
     height: 100%;
 }
 
-.imgteamsection div {
+.teamsectiontitle {
     width:100%;
     display: flex;
     flex-wrap: wrap;
