--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -388,6 +388,7 @@ body {
 #airdrop {
 	display: flex;
 	flex-wrap: wrap;
+    flex-direction: column;
 	width: 100%;
     padding: 0;
     margin: 10px;
