airdrop bottons red

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -427,6 +427,7 @@ body {
 	width: 100%;
 	justify-content: space-around;
 	align-items: space-around;
+    background:red;
 }
 
 .howtoparticipate {
