--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -443,6 +443,17 @@ body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+.howtoparticipate {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.wow {
+    padding:2px;
+}
+
 /*PARTNERS*/
 #partners {
 	display: flex;
