--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -14,7 +14,7 @@
     <div class="airdropbottoms">
       <div class="howtoparticipate">
         <div class="titlehowto">HOW TO PARTICIPATE</div>
-          <div>
+          <div class="howtobottoms">
   <a href="#" class="btn btn-default btn-xl wow tada">How to participate</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check Electhrons</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Telegram Bot</a>
@@ -23,7 +23,7 @@
       </div>
       <div class="howtoparticipate">
         <div class="titlehowto">HOW TO GET YOUR FREE NFT</div>
-          <div>
+        <div class="howtobottoms">
   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Mint NFT for free</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check on OPENSEA</a>
@@ -31,7 +31,7 @@
       </div>
       <div class="howtoparticipate">
         <div class="titlehowto">HOW TO GET MORE NFTs</div>
-          <div>
+        <div class="howtobottoms">
   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Mint more NFT</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check on OPENSEA</a>
