margin blue airdrop

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -455,7 +455,11 @@ body {
     justify-content: center;
     align-items: center;
     width:100%;
-    background:green;
+    background:blue;
+}
+
+.wow {
+    margin:2px;
 }
 
 /*PARTNERS*/
