--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -8,16 +8,38 @@
     
     <div class="partnerchips">
       
-    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
-    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
-    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
-    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
-    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
-    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
-    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
-    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
-    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
-    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
+        <div class="collaboratorsection">
+
+            <img src="img/portfolio/DAPPS.png">
+            <img src="img/portfolio/DAPPS.png">
+            <img src="img/portfolio/DAPPS.png">
+            <img src="img/portfolio/DAPPS.png">
+            <img src="img/portfolio/DAPPS.png">
+            <img src="img/portfolio/DAPPS.png">
+
+        </div>
+
+        <div class="collaboratorsection">
+
+          <img src="img/portfolio/DAPPS.png">
+          <img src="img/portfolio/DAPPS.png">
+          <img src="img/portfolio/DAPPS.png">
+          <img src="img/portfolio/DAPPS.png">
+          <img src="img/portfolio/DAPPS.png">
+          <img src="img/portfolio/DAPPS.png">
+
+        </div>
+
+        <div class="collaboratorsection">
+
+          <img src="img/portfolio/DAPPS.png">
+          <img src="img/portfolio/DAPPS.png">
+          <img src="img/portfolio/DAPPS.png">
+          <img src="img/portfolio/DAPPS.png">
+          <img src="img/portfolio/DAPPS.png">
+          <img src="img/portfolio/DAPPS.png">
+
+        </div>
     
     </div>
     
