--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -8,7 +8,7 @@
     
     <div class="partnerchips">
       
-        <div class="collaboratorsection">
+        <div class="partnersection">
 
             <img src="img/portfolio/DAPPS.png">
             <img src="img/portfolio/DAPPS.png">
@@ -19,7 +19,7 @@
 
         </div>
 
-        <div class="collaboratorsection">
+        <div class="partnersection">
 
           <img src="img/portfolio/DAPPS.png">
           <img src="img/portfolio/DAPPS.png">
@@ -30,7 +30,7 @@
 
         </div>
 
-        <div class="collaboratorsection">
+        <div class="partnersection">
 
           <img src="img/portfolio/DAPPS.png">
           <img src="img/portfolio/DAPPS.png">
