--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -461,30 +461,6 @@ body {
 .wow {
     margin:5px;
 }
-
-/*PARTNERS*/
-#partners {
-	display: flex;
-	flex-wrap: wrap;
-	flex-direction: column;
-	width: 100%;
-    padding: 0;
-    margin: 0;
-}
-
-.titlepartners {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
-}
-
-.partnerchips {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-	align-items: center;
-}
 /*TEAM*/
 
 #team {
@@ -537,6 +513,38 @@ body {
     display: flex;
     flex:wrap;
     flex-direction:row;
+    justify-content: center;
+    align-items: center;
+}
+
+/*PARTNERS*/
+#partners {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.titlepartners {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.partnerchips {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.partnersection {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
