--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -545,6 +545,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    margin:5px;
 }
