partners space between align items

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -546,6 +546,6 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items: space-between;
     margin:5px;
 }
