width partners background red

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -548,4 +548,6 @@ body {
     justify-content: space-between;
     align-items: space-between;
     margin:5px;
+    width:100%;
+    background:red;
 }
