--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -545,8 +545,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: space-between;
+    justify-content: space-around;
+    align-items: space-around;
     margin:5px;
     width:100%;
     background:red;
