--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -10,34 +10,33 @@
       
         <div class="partnersection">
 
-            <img src="img/portfolio/DAPPS.png">
-            <img src="img/portfolio/DAPPS.png">
-            <img src="img/portfolio/DAPPS.png">
-            <img src="img/portfolio/DAPPS.png">
-            <img src="img/portfolio/DAPPS.png">
-            <img src="img/portfolio/DAPPS.png">
-
+            <img src="img/Partners/1inch.png">
+            <img src="img/Partners/anyswap.png">
+            <img src="img/Partners/binance.png">
+            <img src="img/Partners/bisq.png">
+            <img src="img/Partners/burgerswap.png">
+            <img src="img/Partners/broex.png">
         </div>
 
         <div class="partnersection">
 
-          <img src="img/portfolio/DAPPS.png">
-          <img src="img/portfolio/DAPPS.png">
-          <img src="img/portfolio/DAPPS.png">
-          <img src="img/portfolio/DAPPS.png">
-          <img src="img/portfolio/DAPPS.png">
-          <img src="img/portfolio/DAPPS.png">
-
+          <img src="img/Partners/Chainlink.png">
+          <img src="img/Partners/coingecko.png">
+          <img src="img/Partners/cryptobuddy.png">
+          <img src="img/Partners/farmfol.png">
+          <img src="img/Partners/getblock.png">
+          <img src="img/Partners/gotbit.png">
+          
         </div>
 
         <div class="partnersection">
 
-          <img src="img/portfolio/DAPPS.png">
-          <img src="img/portfolio/DAPPS.png">
-          <img src="img/portfolio/DAPPS.png">
-          <img src="img/portfolio/DAPPS.png">
-          <img src="img/portfolio/DAPPS.png">
-          <img src="img/portfolio/DAPPS.png">
+          <img src="img/Partners/mdex.png">
+          <img src="img/Partners/Pancakeswap.png">
+          <img src="img/Partners/polygon-matic.png">
+          <img src="img/Partners/SushiSwap.png">
+          <img src="img/Partners/Uniswap.png">
+          <img src="img/Partners/walletnow.png">
 
         </div>
     
