partner section img 30% red-

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -549,5 +549,8 @@ body {
     align-items: space-around;
     margin:5px;
     width:100%;
-    background:red;
+}
+
+.partnersection img {
+    width:30%;
 }
