correcion imagenes partners

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -32,10 +32,10 @@
         <div class="partnersection">
 
           <img src="img/Partners/mdex.png">
-          <img src="img/Partners/Pancakeswap.png">
+          <img src="img/Partners/PancakeSwap.png">
           <img src="img/Partners/polygon-matic.png">
           <img src="img/Partners/SushiSwap.png">
-          <img src="img/Partners/Uniswap.png">
+          <img src="img/Partners/uniswap.png">
           <img src="img/Partners/walletnow.png">
 
         </div>
