partner img red

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -10,33 +10,33 @@
       
         <div class="partnersection">
 
-            <img class="imgpartners" src="img/Partners/1inch.png">
-            <img class="imgpartners" src="img/Partners/anyswap.png">
-            <img class="imgpartners" src="img/Partners/binance.png">
-            <img class="imgpartners" src="img/Partners/bisq.png">
-            <img class="imgpartners" src="img/Partners/burgerswap.png">
-            <img class="imgpartners" src="img/Partners/broex.png">
+            <img src="img/Partners/1inch.png">
+            <img src="img/Partners/anyswap.png">
+            <img src="img/Partners/binance.png">
+            <img src="img/Partners/bisq.png">
+            <img src="img/Partners/burgerswap.png">
+            <img src="img/Partners/broex.png">
         </div>
 
         <div class="partnersection">
 
-          <img class="imgpartners" src="img/Partners/Chainlink.png">
-          <img class="imgpartners" src="img/Partners/coingecko.png">
-          <img class="imgpartners" src="img/Partners/cryptobuddy.png">
-          <img class="imgpartners" src="img/Partners/farmfol.png">
-          <img class="imgpartners" src="img/Partners/getblock.png">
-          <img class="imgpartners" src="img/Partners/gotbit.png">
+          <img src="img/Partners/Chainlink.png">
+          <img src="img/Partners/coingecko.png">
+          <img src="img/Partners/cryptobuddy.png">
+          <img src="img/Partners/farmfol.png">
+          <img src="img/Partners/getblock.png">
+          <img src="img/Partners/gotbit.png">
           
         </div>
 
         <div class="partnersection">
 
-          <img class="imgpartners" src="img/Partners/mdex.png">
-          <img class="imgpartners" src="img/Partners/PancakeSwap.png">
-          <img class="imgpartners" src="img/Partners/polygon-matic.png">
-          <img class="imgpartners" src="img/Partners/SushiSwap.png">
+          <img src="img/Partners/mdex.png">
+          <img src="img/Partners/PancakeSwap.png">
+          <img src="img/Partners/polygon-matic.png">
+          <img src="img/Partners/SushiSwap.png">
           <img src="img/Partners/uniswap.png">
-          <img class="imgpartners" src="img/Partners/walletnow.png">
+          <img src="img/Partners/walletnow.png">
 
         </div>
     
