--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -548,10 +548,5 @@ body {
     justify-content: space-around;
     align-items: space-around;
     margin:5px;
-    width:100%;
-}
-
-.imgpartners {
-    width:10%;
-    height:auto;
+    background: red;
 }
