--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -548,5 +548,10 @@ body {
     justify-content: space-around;
     align-items: space-around;
     margin:5px;
-    background: red;
+    background: blue;
+}
+
+.partnersection img {
+    width:10%;
+    height:10%;
 }
