--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -546,7 +546,7 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
-    align-items: space-around;
+    align-items: center;
     margin:5px;
     background: blue;
 }
