partner center green

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -548,7 +548,7 @@ body {
     justify-content: space-around;
     align-items: center;
     margin:5px;
-    background: blue;
+    background: green;
 }
 
 .partnersection img {
