--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -9,31 +9,31 @@
     <div class="partnerchips">
       
         <div class="partnersection">
-            <img src="img/Partners/1inch.png">
-            <img src="img/Partners/anyswap.png">
-            <img src="img/Partners/binance.png">
-            <img src="img/Partners/bisq.png">
-            <img src="img/Partners/burgerswap.png">
-            <img src="img/Partners/broex.png">
+            <img href="" src="img/Partners/1inch.png">
+            <img href="" src="img/Partners/anyswap.png">
+            <img href="" src="img/Partners/binance.png">
+            <img href="" src="img/Partners/bisq.png">
+            <img href="" src="img/Partners/burgerswap.png">
+            <img href="" src="img/Partners/broex.png">
         </div>
 
         <div class="partnersection">
-          <img src="img/Partners/Chainlink.png">
-          <img src="img/Partners/coingecko.png">
-          <img src="img/Partners/cryptobuddy.png">
-          <img src="img/Partners/farmfol.png">
-          <img src="img/Partners/getblock.png">
-          <img src="img/Partners/gotbit.png">
+          <img href="" src="img/Partners/Chainlink.png">
+          <img href="" src="img/Partners/coingecko.png">
+          <img href="" src="img/Partners/cryptobuddy.png">
+          <img href="" src="img/Partners/farmfol.png">
+          <img href="" src="img/Partners/getblock.png">
+          <img href="" src="img/Partners/gotbit.png">
           
         </div>
 
         <div class="partnersection">
-          <img src="img/Partners/mdex.png">
-          <img src="img/Partners/PancakeSwap.png">
-          <img src="img/Partners/polygon-matic.png">
-          <img src="img/Partners/SushiSwap.png">
-          <img src="img/Partners/uniswap.png">
-          <img src="img/Partners/walletnow.png">
+          <img href="" src="img/Partners/mdex.png">
+          <img href="" src="img/Partners/PancakeSwap.png">
+          <img href="" src="img/Partners/polygon-matic.png">
+          <img href="" src="img/Partners/SushiSwap.png">
+          <img href="" src="img/Partners/uniswap.png">
+          <img href="" src="img/Partners/walletnow.png">
 
         </div>
     
