--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -2,7 +2,7 @@
 
     <div class="titlepartners">
       
-      <h2>Partners and colaboradores</h2>
+      <h2>Partners</h2>
     
     </div>
     
@@ -37,6 +37,26 @@
 
         </div>
     
+    </div>
+
+    <div class="titlepartners">
+      
+      <h2>Partners</h2>
+    
+    </div>
+    
+    <div class="partnerchips">
+      
+        <div class="partnersection">
+            <img href="" src="img/Partners/collaborators.png">
+            <img href="" src="img/Partners/collaborators.png">
+            <img href="" src="img/Partners/collaborators.png">
+            <img href="" src="img/Partners/collaborators.png">
+            <img href="" src="img/Partners/collaborators.png">
+            <img href="" src="img/Partners/collaborators.png">
+        </div>
+
+   
     </div>
     
     </section>
