community-army-collaborators

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -41,21 +41,39 @@
 
     <div class="titlepartners">
       
-      <h2>Partners</h2>
+      <h2>Collaborators</h2>
     
     </div>
     
     <div class="partnerchips">
       
         <div class="partnersection">
-            <img href="" src="img/Partners/collaborators.png">
-            <img href="" src="img/Partners/collaborators.png">
-            <img href="" src="img/Partners/collaborators.png">
-            <img href="" src="img/Partners/collaborators.png">
-            <img href="" src="img/Partners/collaborators.png">
-            <img href="" src="img/Partners/collaborators.png">
+            <img href="" src="img/collaborators/collaborators.png">
+            <img href="" src="img/collaborators/collaborators.png">
+            <img href="" src="img/collaborators/collaborators.png">
+            <img href="" src="img/collaborators/collaborators.png">
+            <img href="" src="img/collaborators/collaborators.png">
+            <img href="" src="img/collaborators/collaborators.png">
         </div>
+   
+    </div>
 
+    <div class="titlepartners">
+      
+      <h2>Community - Army</h2>
+    
+    </div>
+    
+    <div class="partnerchips">
+      
+        <div class="partnersection">
+            <img href="" src="img/community-army/community-army.png">
+            <img href="" src="img/community-army/community-army.png">
+            <img href="" src="img/community-army/community-army.png">
+            <img href="" src="img/community-army/community-army.png">
+            <img href="" src="img/community-army/community-army.png">
+            <img href="" src="img/community-army/community-army.png">
+        </div>
    
     </div>
     
