--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -9,31 +9,31 @@
     <div class="partnerchips">
       
         <div class="partnersection">
-            <img href="" src="img/Partners/1inch.png">
-            <img href="" src="img/Partners/anyswap.png">
-            <img href="" src="img/Partners/binance.png">
-            <img href="" src="img/Partners/bisq.png">
-            <img href="" src="img/Partners/burgerswap.png">
-            <img href="" src="img/Partners/broex.png">
+            <img href="https://app.1inch.io/" target="_blank" src="img/Partners/1inch.png">
+            <img href="https://anyswap.exchange/" target="_blank" src="img/Partners/anyswap.png">
+            <img href="https://www.binance.com" target="_blank" src="img/Partners/binance.png">
+            <img href="https://bisq.network" target="_blank" src="img/Partners/bisq.png">
+            <img href="https://burgerswap.org/" target="_blank" src="img/Partners/burgerswap.png">
+            <img href="https://broex.io/" target="_blank" src="img/Partners/broex.png">
         </div>
 
         <div class="partnersection">
-          <img href="" src="img/Partners/Chainlink.png">
-          <img href="" src="img/Partners/coingecko.png">
-          <img href="" src="img/Partners/cryptobuddy.png">
-          <img href="" src="img/Partners/farmfol.png">
-          <img href="" src="img/Partners/getblock.png">
-          <img href="" src="img/Partners/gotbit.png">
+          <img href="https://chain.link/" target="_blank" src="img/Partners/Chainlink.png">
+          <img href="https://www.coingecko.com" target="_blank" src="img/Partners/coingecko.png">
+          <img href="https://cryptobuddy.info" target="_blank" src="img/Partners/cryptobuddy.png">
+          <img href="https://autofarm.network/" target="_blank" src="img/Partners/autofarm.png">
+          <img href="https://getblock.io/" target="_blank" src="img/Partners/getblock.png">
+          <img href="https://gotbit.io/" target="_blank" src="img/Partners/gotbit.png">
           
         </div>
 
         <div class="partnersection">
-          <img href="" src="img/Partners/mdex.png">
-          <img href="" src="img/Partners/PancakeSwap.png">
-          <img href="" src="img/Partners/polygon-matic.png">
-          <img href="" src="img/Partners/SushiSwap.png">
-          <img href="" src="img/Partners/uniswap.png">
-          <img href="" src="img/Partners/walletnow.png">
+          <img href="https://mdex.co" target="_blank" src="img/Partners/mdex.png">
+          <img href="https://pancakeswap.finance/" target="_blank" src="img/Partners/PancakeSwap.png">
+          <img href="https://polygon.technology/" target="_blank" src="img/Partners/polygon-matic.png">
+          <img href="https://sushi.com/" target="_blank" src="img/Partners/SushiSwap.png">
+          <img href="https://uniswap.org/" target="_blank" src="img/Partners/uniswap.png">
+          <img href="https://walletnow.net/" target="_blank" src="img/Partners/walletnow.png">
 
         </div>
     
@@ -48,12 +48,12 @@
     <div class="partnerchips">
       
         <div class="partnersection">
-            <img href="" src="img/collaborators/collaborators.png">
-            <img href="" src="img/collaborators/collaborators.png">
-            <img href="" src="img/collaborators/collaborators.png">
-            <img href="" src="img/collaborators/collaborators.png">
-            <img href="" src="img/collaborators/collaborators.png">
-            <img href="" src="img/collaborators/collaborators.png">
+            <img href="" target="_blank" src="img/collaborators/collaborators.png">
+            <img href="" target="_blank" src="img/collaborators/collaborators.png">
+            <img href="" target="_blank" src="img/collaborators/collaborators.png">
+            <img href="" target="_blank" src="img/collaborators/collaborators.png">
+            <img href="" target="_blank" src="img/collaborators/collaborators.png">
+            <img href="" target="_blank" src="img/collaborators/collaborators.png">
         </div>
    
     </div>
@@ -67,12 +67,12 @@
     <div class="partnerchips">
       
         <div class="partnersection">
-            <img href="" src="img/community-army/community-army.png">
-            <img href="" src="img/community-army/community-army.png">
-            <img href="" src="img/community-army/community-army.png">
-            <img href="" src="img/community-army/community-army.png">
-            <img href="" src="img/community-army/community-army.png">
-            <img href="" src="img/community-army/community-army.png">
+            <img href="" target="_blank" src="img/community-army/community-army.png">
+            <img href="" target="_blank" src="img/community-army/community-army.png">
+            <img href="" target="_blank" src="img/community-army/community-army.png">
+            <img href="" target="_blank" src="img/community-army/community-army.png">
+            <img href="" target="_blank" src="img/community-army/community-army.png">
+            <img href="" target="_blank" src="img/community-army/community-army.png">
         </div>
    
     </div>
