--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -9,7 +9,7 @@
     <div class="partnerchips">
       
         <div class="partnersection">
-            <img href="https://app.1inch.io/" target="_blank" src="img/Partners/1inch.png">
+            <img src="img/Partners/1inch.png" href="https://app.1inch.io/" target="_blank">
             <img href="https://anyswap.exchange/" target="_blank" src="img/Partners/anyswap.png">
             <img href="https://www.binance.com" target="_blank" src="img/Partners/binance.png">
             <img href="https://bisq.network" target="_blank" src="img/Partners/bisq.png">
