--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -9,31 +9,31 @@
     <div class="partnerchips">
       
         <div class="partnersection">
-           <a class="partima" href="https://app.1inch.io/" target="_blank"><img src="img/Partners/1inch.png"></a>
-           <a class="partima" href="https://anyswap.exchange/" target="_blank"><img src="img/Partners/anyswap.png"></a>
-           <a class="partima" href="https://www.binance.com" target="_blank"><img src="img/Partners/binance.png"></a>
-           <a class="partima" href="https://bisq.network" target="_blank"><img src="img/Partners/bisq.png"></a>
-           <a class="partima" href="https://burgerswap.org/" target="_blank"><img src="img/Partners/burgerswap.png"></a>
-           <a class="partima" href="https://broex.io/" target="_blank"><img src="img/Partners/broex.png"></a>
+           <a href="https://app.1inch.io/" target="_blank"><img src="img/Partners/1inch.png"></a>
+           <a href="https://anyswap.exchange/" target="_blank"><img src="img/Partners/anyswap.png"></a>
+           <a href="https://www.binance.com" target="_blank"><img src="img/Partners/binance.png"></a>
+           <a href="https://bisq.network" target="_blank"><img src="img/Partners/bisq.png"></a>
+           <a href="https://burgerswap.org/" target="_blank"><img src="img/Partners/burgerswap.png"></a>
+           <a href="https://broex.io/" target="_blank"><img src="img/Partners/broex.png"></a>
         </div>
 
         <div class="partnersection">
-          <a class="partima" href="https://chain.link/" target="_blank"><img src="img/Partners/Chainlink.png"></a>
-          <a class="partima" href="https://www.coingecko.com" target="_blank"><img src="img/Partners/coingecko.png"></a>
-          <a class="partima" href="https://cryptobuddy.info" target="_blank"><img src="img/Partners/cryptobuddy.png"></a>
-          <a class="partima" href="https://autofarm.network/" target="_blank"><img src="img/Partners/autofarm.png"></a>
-          <a class="partima" href="https://getblock.io/" target="_blank"><img src="img/Partners/getblock.png"></a>
-          <a class="partima" href="https://gotbit.io/" target="_blank"><img src="img/Partners/gotbit.png"></a>
+          <a href="https://chain.link/" target="_blank"><img src="img/Partners/Chainlink.png"></a>
+          <a href="https://www.coingecko.com" target="_blank"><img src="img/Partners/coingecko.png"></a>
+          <a href="https://cryptobuddy.info" target="_blank"><img src="img/Partners/cryptobuddy.png"></a>
+          <a href="https://autofarm.network/" target="_blank"><img src="img/Partners/autofarm.png"></a>
+          <a href="https://getblock.io/" target="_blank"><img src="img/Partners/getblock.png"></a>
+          <a href="https://gotbit.io/" target="_blank"><img src="img/Partners/gotbit.png"></a>
           
         </div>
 
         <div class="partnersection">
-          <a class="partima" href="https://mdex.co" target="_blank"><img src="img/Partners/mdex.png"></a>
-          <a class="partima" href="https://pancakeswap.finance/" target="_blank"><img src="img/Partners/PancakeSwap.png"></a>
-          <a class="partima" href="https://polygon.technology/" target="_blank"><img src="img/Partners/polygon-matic.png"></a>
-          <a class="partima" href="https://sushi.com/" target="_blank"><img src="img/Partners/SushiSwap.png"></a>
-          <a class="partima" href="https://uniswap.org/" target="_blank"><img src="img/Partners/uniswap.png"></a>
-          <a class="partima" href="https://walletnow.net/" target="_blank"><img src="img/Partners/walletnow.png"></a>
+          <a href="https://mdex.co" target="_blank"><img src="img/Partners/mdex.png"></a>
+          <a href="https://pancakeswap.finance/" target="_blank"><img src="img/Partners/PancakeSwap.png"></a>
+          <a href="https://polygon.technology/" target="_blank"><img src="img/Partners/polygon-matic.png"></a>
+          <a href="https://sushi.com/" target="_blank"><img src="img/Partners/SushiSwap.png"></a>
+          <a href="https://uniswap.org/" target="_blank"><img src="img/Partners/uniswap.png"></a>
+          <a href="https://walletnow.net/" target="_blank"><img src="img/Partners/walletnow.png"></a>
 
         </div>
     
@@ -48,12 +48,12 @@
     <div class="partnerchips">
       
         <div class="partnersection">
-          <a class="partima" href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
-          <a class="partima" href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
-          <a class="partima" href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
-          <a class="partima" href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
-          <a class="partima" href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
-          <a class="partima" href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
+          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
+          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
+          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
+          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
+          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
+          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
         </div>
    
     </div>
@@ -67,12 +67,12 @@
     <div class="partnerchips">
       
         <div class="partnersection">
-          <a class="partima" href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
-          <a class="partima" href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
-          <a class="partima" href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
-          <a class="partima" href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
-          <a class="partima" href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
-          <a class="partima" href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
+          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
+          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
+          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
+          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
+          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
+          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
         </div>
    
     </div>
