partnersection img a red

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -549,7 +549,6 @@ body {
     margin:5px;
 }
 
-.partnersection a img {
-    width:10%;
-    height:10%;
+.partnersection img a {
+    background:red;
 }
