--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -549,7 +549,8 @@ body {
     margin:5px;
 }
 
-.partnersection a {
+.partnersection a,
+.partnersection img {
     width:10%;
     height: 10%;
 }
