--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -549,8 +549,7 @@ body {
     margin:5px;
 }
 
-.partnersection a,
-.partnersection img {
-    width:10%;
-    height: 10%;
+.partnersection img a{
+    width:50%;
+    height: 50%;
 }
