--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -544,6 +544,7 @@ body {
 .partnersection {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
     justify-content: space-around;
     align-items: center;
     margin:5px;
