--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -9,12 +9,12 @@
     <div class="partnerchips">
       
         <div class="partnersection">
-           <a href="https://app.1inch.io/" target="_blank"><img src="img/Partners/1inch.png"></a>
-           <a href="https://anyswap.exchange/" target="_blank"><img src="img/Partners/anyswap.png"></a>
-           <a href="https://www.binance.com" target="_blank"><img src="img/Partners/binance.png"></a>
-           <a href="https://bisq.network" target="_blank"><img src="img/Partners/bisq.png"></a>
-           <a href="https://burgerswap.org/" target="_blank"><img src="img/Partners/burgerswap.png"></a>
-           <a href="https://broex.io/" target="_blank"><img src="img/Partners/broex.png"></a>
+          <div><a href="https://app.1inch.io/" target="_blank"><img src="img/Partners/1inch.png"></a></div>
+          <div><a href="https://anyswap.exchange/" target="_blank"><img src="img/Partners/anyswap.png"></a></div>
+          <div><a href="https://www.binance.com" target="_blank"><img src="img/Partners/binance.png"></a></div>
+          <div><a href="https://bisq.network" target="_blank"><img src="img/Partners/bisq.png"></a></div>
+          <div><a href="https://burgerswap.org/" target="_blank"><img src="img/Partners/burgerswap.png"></a></div>
+          <div><a href="https://broex.io/" target="_blank"><img src="img/Partners/broex.png"></a></div>
         </div>
 
         <div class="partnersection">
