--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -549,7 +549,7 @@ body {
     margin:5px;
 }
 
-.partnersection a img{
-    width:30%;
-    height: 30%;
+.partnersection div{
+    width:10%;
+    height: 10%;
 }
