--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -1,80 +1,18 @@
-<section id="partners">
+<section id="partnerscolcomm">
+<div class="partners">
 
-    <div class="titlepartners">
-      
-      <h2>Partners</h2>
-    
-    </div>
-    
-    <div class="partnerchips">
-      
-        <div class="partnersection">
-          <div><a href="https://app.1inch.io/" target="_blank"><img src="img/Partners/1inch.png"></a></div>
-          <div><a href="https://anyswap.exchange/" target="_blank"><img src="img/Partners/anyswap.png"></a></div>
-          <div><a href="https://www.binance.com" target="_blank"><img src="img/Partners/binance.png"></a></div>
-          <div><a href="https://bisq.network" target="_blank"><img src="img/Partners/bisq.png"></a></div>
-          <div><a href="https://burgerswap.org/" target="_blank"><img src="img/Partners/burgerswap.png"></a></div>
-          <div><a href="https://broex.io/" target="_blank"><img src="img/Partners/broex.png"></a></div>
-        </div>
+  <div class="titlepartners">
+    <h2>Partners</h2>
+  </div>
 
-        <div class="partnersection">
-          <a href="https://chain.link/" target="_blank"><img src="img/Partners/Chainlink.png"></a>
-          <a href="https://www.coingecko.com" target="_blank"><img src="img/Partners/coingecko.png"></a>
-          <a href="https://cryptobuddy.info" target="_blank"><img src="img/Partners/cryptobuddy.png"></a>
-          <a href="https://autofarm.network/" target="_blank"><img src="img/Partners/autofarm.png"></a>
-          <a href="https://getblock.io/" target="_blank"><img src="img/Partners/getblock.png"></a>
-          <a href="https://gotbit.io/" target="_blank"><img src="img/Partners/gotbit.png"></a>
-          
-        </div>
-
-        <div class="partnersection">
-          <a href="https://mdex.co" target="_blank"><img src="img/Partners/mdex.png"></a>
-          <a href="https://pancakeswap.finance/" target="_blank"><img src="img/Partners/PancakeSwap.png"></a>
-          <a href="https://polygon.technology/" target="_blank"><img src="img/Partners/polygon-matic.png"></a>
-          <a href="https://sushi.com/" target="_blank"><img src="img/Partners/SushiSwap.png"></a>
-          <a href="https://uniswap.org/" target="_blank"><img src="img/Partners/uniswap.png"></a>
-          <a href="https://walletnow.net/" target="_blank"><img src="img/Partners/walletnow.png"></a>
-
-        </div>
-    
-    </div>
-
-    <div class="titlepartners">
-      
-      <h2>Collaborators</h2>
-    
-    </div>
-    
-    <div class="partnerchips">
-      
-        <div class="partnersection">
-          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
-          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
-          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
-          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
-          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
-          <a href="#" target="_blank"><img src="img/collaborators/collaborators.png"></a>
-        </div>
-   
-    </div>
-
-    <div class="titlepartners">
-      
-      <h2>Community - Army</h2>
-    
-    </div>
-    
-    <div class="partnerchips">
-      
-        <div class="partnersection">
-          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
-          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
-          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
-          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
-          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
-          <a href="#" target="_blank"><img src="img/community-army/community-army.png"></a>
-        </div>
-   
-    </div>
+  <div class="imalinkspartners">
+        <a href="https://app.1inch.io/" target="_blank"><img src="img/Partners/1inch.png"></a>
+        <a href="https://anyswap.exchange/" target="_blank"><img src="img/Partners/anyswap.png"></a>
+        <a href="https://www.binance.com" target="_blank"><img src="img/Partners/binance.png"></a>
+        <a href="https://bisq.network" target="_blank"><img src="img/Partners/bisq.png"></a>
+        <a href="https://burgerswap.org/" target="_blank"><img src="img/Partners/burgerswap.png"></a>
+        <a href="https://broex.io/" target="_blank"><img src="img/Partners/broex.png"></a>
+  </div>
+</div>
     
     </section>
