--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -551,7 +551,8 @@ body {
     width:100%;
 }
 
-.imalinkspartners a {
+.imalinkspartners a,
+.imalinkspartners img {
     width:10%;
     height: 10%;
 }
