--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -551,8 +551,12 @@ body {
     width:100%;
 }
 
-.imalinkspartners a,
-.imalinkspartners img {
+.imalinkspartners a {
     width:10%;
     height: 10%;
+}
+
+.imalinkspartners img {
+    width:100%;
+    height:100%;
 }
