titlepartners font family

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -540,7 +540,11 @@ body {
     justify-content: center;
     align-items: center;
     width:100%;
-    margin: 5px;
+    margin: 10px;
+}
+
+.titlepartners h2 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .imalinkspartners {
