--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -163,9 +163,10 @@ header {
         text-align: center;
         padding: 100px 15px 100px;
         width: 100%;
+        height: 100%;
         .header-content-inner {
             h1 {
-                font-weight: 500;
+                font-weight: 700;
                 text-transform: uppercase;
                 margin-top: 0;
                 margin-bottom: 0;
@@ -554,6 +555,7 @@ body {
     justify-content: space-around;
     align-items: center;
     width:100%;
+    margin: 5px 0 5px 0;
 }
 .imalinkspartners a {
     width:12%;
