--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -167,8 +167,8 @@ header {
             h1 {
                 font-weight: 700;
                 text-transform: uppercase;
-                margin-top: 0;
-                margin-bottom: 0;
+                margin-top: 3em;
+                margin-bottom: 1em;
             }
             hr {
                 margin: 30px auto;
@@ -242,8 +242,8 @@ header {
             width: 100%;
             text-align: center;
             position: absolute;
-            top: 80%;
-            transform: translateY(-80%);
+            top: 50%;
+            transform: translateY(-50%);
             .project-category,
             .project-name {
                 @include sans-serif-font;
