header margin top 2em

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -161,14 +161,15 @@ header {
     .header-content {
         position: relative;
         text-align: center;
+        margin-top:2em;
         padding: 100px 15px 100px;
         width: 100%;
            .header-content-inner {
             h1 {
                 font-weight: 700;
                 text-transform: uppercase;
-                margin-top: 2em;
-                margin-bottom: 3em;
+                margin-top: 0;
+                margin-bottom: 0;
             }
             hr {
                 margin: 30px auto;
