--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -161,7 +161,8 @@ header {
     .header-content {
         position: relative;
         text-align: center;
-        margin-top:2em;
+        margin-top:3em;
+        margin-bottom: 2em;
         padding: 100px 15px 100px;
         width: 100%;
            .header-content-inner {
