padding boton 2em header

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -162,8 +162,8 @@ header {
         position: relative;
         text-align: center;
         margin-top:3em;
-        margin-bottom: 2em;
         padding: 100px 15px 100px;
+        padding-bottom: 2em;
         width: 100%;
            .header-content-inner {
             h1 {
