--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -5,7 +5,7 @@
 
 <body id="page-top">
   {% include nav.html %}
-  {% include headerv.html %}
+  {% include header.html %}
   {% include call-to-action.html %}
   {% include services.html %}
   {% include portfolio.html %}
