--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -357,7 +357,7 @@ body {
 	flex-direction:column;
 	width:100%;
 	height:100%;
-    margin-top:10em;
+    padding-top:1em;
     background:#000012;
 }
 
