--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -368,6 +368,11 @@ body {
 	height:100%;
 }
 
+.headerv h1 {
+    margin-top:1em;
+    width:90%;
+}
+
 .headerbottoms {
     display: flex;
     flex-wrap: wrap;
