--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -364,6 +364,8 @@ body {
 	display:flex;
 	flex-wrap:wrap;
 	flex-direction:column;
+    justify-content: center;
+    align-items: center;
 	width:100%;
 	height:100%;
 }
