--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -373,6 +373,7 @@ body {
 .headerv h1 {
     margin-top:1em;
     width:90%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .headerbottoms {
@@ -380,7 +381,11 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    width: 30%;
+    width: 50%;
+}
+
+.headerbottoms a {
+    margin:0.5em;
 }
 
 /*SERVICE*/
