--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -370,10 +370,15 @@ body {
 	height:100%;
 }
 
+.headerv p {
+    width:90%;
+}
+
 .headerv h1 {
     margin-top:1em;
     width:90%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-transform: uppercase;
 }
 
 .headerbottoms {
