--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -588,7 +588,7 @@ body {
 }
 
 .titlepartners h2 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
 }
 
 .imalinkspartners {
