--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -11,7 +11,7 @@
   {% include portfolio.html %}
   {% include community.html %}
   {% include airdrop.html %}
-  {% include team.html %}
+  {% include teamv.html %}
   {% include partners.html %}
   {% include contact.html %}
   {% include scripts.html %}
