--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -513,6 +513,56 @@ body {
     overflow: hidden;
 }
 
+/*TEAM VERSION CSS*/
+
+.teanv {
+	display:flex;
+	flex-wrap:wrap;
+	flex-direction:column;
+	width:100%;
+	height:100%;
+	justify-content:center;
+	align-items:center;
+}
+
+.teanvcont {
+	display:flex;
+	flex-wrap:wrap;
+	width:100%;
+	height:100%;
+	justify-content:center;
+	align-items:center;
+}
+
+.teanvcont h2 {
+	width:100%;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+
+.teampeople {
+	display:flex;
+	flex-wrap:wrap;
+	flex-direction:row;
+	width:100%;
+	height:100%;
+	justify-content:space-around;
+	align-items:center;
+}
+
+.people {
+	display:flex;
+	flex-wrap:wrap;
+	flex-direction:column;
+	width:25%;
+	height:100%;
+	justify-content:center;
+	align-items:center;
+}
+
+/**/
+
 .imgteamsection {
     display: flex;
     flex-direction:column;
