--- a/_includes/teamv.html
+++ b/_includes/teamv.html
@@ -4,108 +4,108 @@
             <h2>OUR TEAM</h2>
             <div class="teampeople">
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
-                </div>
-
-            </div>
-
-            <div class="teampeople">
-                <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
-                </div>
-
-                <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
-                </div>
-
-                <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
-                </div>
-
-                <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
             </div>
 
             <div class="teampeople">
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
             </div>
 
             <div class="teampeople">
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
                 <div class="people">
-                    <img src="">
-                    <h3>NOMBRE</h3>
-                    <H4>CARGO</H4>
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
+                </div>
+
+            </div>
+
+            <div class="teampeople">
+                <div class="people">
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
+                </div>
+
+                <div class="people">
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
+                </div>
+
+                <div class="people">
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
+                </div>
+
+                <div class="people">
+                    <img src="../img/team/Moe.png">
+                    <h4>NOMBRE</h4>
+                    <H5>CARGO</H5>
                 </div>
 
             </div>
