--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -534,17 +534,17 @@ body {
 	align-items:center;
 }
 
-.teanvcont h2 {
+.teamvcont h2 {
 	width:100%;
 	display:flex;
 	justify-content:center;
 	align-items:center;
+    color: white;
 }
 
 .teampeople {
 	display:flex;
 	flex-wrap:wrap;
-	flex-direction:row;
 	width:100%;
 	height:100%;
 	justify-content:space-around;
@@ -559,6 +559,14 @@ body {
 	height:100%;
 	justify-content:center;
 	align-items:center;
+}
+
+.people h4,
+.people h5 {
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin:0;
+    padding:0;
 }
 
 /**/
