--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -559,7 +559,7 @@ body {
 	height:100%;
 	justify-content:center;
 	align-items:center;
-    margin:0.5em;
+    margin:5px 0 5px 0;
 }
 
 .people h4,
