overflow hidden 800px

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -511,6 +511,7 @@ body {
     background: url('../img/worldteam.gif') no-repeat center center fixed;
     background-size: cover;
     overflow: hidden;
+    width:800px;
 }
 
 /*TEAM VERSION CSS*/
