--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -511,7 +511,7 @@ body {
     background: url('../img/worldteam.gif') no-repeat center center fixed;
     background-size: cover;
     overflow: hidden;
-    width:800px;
+    height: 600px;
 }
 
 /*TEAM VERSION CSS*/
