--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -509,7 +509,7 @@ body {
 
 #team {
     background: url('../img/worldteam.gif') no-repeat center center fixed;
-    background-size: cover;
+    background-size: contain;
     overflow: hidden;
     height: 600px;
 }
@@ -520,8 +520,6 @@ body {
 	display:flex;
 	flex-wrap:wrap;
 	flex-direction:column;
-	width:100%;
-	height:100%;
 	justify-content:center;
 	align-items:center;
 }
