--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -509,7 +509,7 @@ body {
 
 #team {
     background: url('../img/worldteam.gif') no-repeat center center fixed;
-    background-size: contain;
+    background-size: 50%;
     overflow: hidden;
     height: 600px;
 }
