--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -508,7 +508,7 @@ body {
 /*TEAM*/
 
 #team {
-    background: url('../img/worldteam.gif') no-repeat center center fixed;
+    background: url('../img/worldteam.gif');
 }
 
 /*TEAM VERSION CSS*/
