--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -508,7 +508,8 @@ body {
 /*TEAM*/
 
 #team {
-    background: url('../img/worldteam.gif');
+    background: url('../img/worldteam.gif') no-repeat;
+    width:100%;
 }
 
 /*TEAM VERSION CSS*/
