--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -508,7 +508,7 @@ body {
 /*TEAM*/
 
 #team {
-    background-image: url('../img/worldteam.gif') no-repeat;
+    background-image: url('../img/worldteam.gif');
     position: relative;
     width: 100%;
     min-height: auto;
