overflow hidden img team

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -516,6 +516,7 @@ body {
     background-position: center;
     text-align: center;
     color: white;
+    overflow: hidden;
 }
 
 /*TEAM VERSION CSS*/
