--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -511,6 +511,7 @@ body {
     background-image: url('../img/worldteam.gif');
     position: relative;
     width: 100%;
+    height: 700px;
     min-height: auto;
     @include background-cover;
     background-position: center;
