--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -537,8 +537,7 @@ body {
 	height:100%;
 	justify-content:center;
 	align-items:center;
-    margin:-1em;
-    padding:0;
+    padding:-1em 0 3em 0;
 }
 
 .teamvcont h2 {
